tests/xy_c_compile_resources/errors/richErrors.xy
func mydiv(a: Float, b: Float) -> Float
>> b != 0
>> a > b
{
    return a / b;
}

func test(a: Float, b: Float) -> Float {
    return a * mydiv(a, b) - b;
}
